# Quasicrystalline-computer

./: ARCHITETTURA_IBRIDA_Ammann_Beenker_Penrose.md  IEEE_Micro_Paper.md  MYBINDER.md  PUBLICATION_METADATA.md  advanced_integrated_framework.py  analog_hybrid_computing_module.py  benchmark_suite.py  codemeta.json  neuromorphic_computing_module.py  quantum_computing_module.py  requirements-core.txt  requirements.txt  simulation_framework.py
senemosia_os/: Cargo.toml  README.md  build.rs  limine.cfg  linker.ld
senemosia_os/.cargo/: config.toml
senemosia_os/dev/: build.sh  make_iso.sh
senemosia_os/src/: ADVANCED_COMPUTING.md  ARCHITECTURE.md  main.rs
senemosia_os/src/analog/: mod.rs  scheduler.rs
senemosia_os/src/drivers/: mod.rs  video.rs
senemosia_os/src/fs/: mod.rs  snfs.rs
senemosia_os/src/geometry/: conflict.rs  mod.rs  projection.rs
senemosia_os/src/hybrid/: analog.rs  converter.rs  interface.rs  mod.rs  optimizer.rs
senemosia_os/src/interrupts/: apic.rs  handlers.rs  mod.rs
senemosia_os/src/ipc/: mod.rs  wave_channel.rs
senemosia_os/src/memory/: allocator.rs  mod.rs
senemosia_os/src/net/: mod.rs  wave_nic.rs
senemosia_os/src/neuromorphic/: interface.rs  memristor.rs  mod.rs
senemosia_os/src/phi/: README.md  mod.rs  syscall_bindings.rs
senemosia_os/src/phi/apps/: gestione_cooperativa.phi
senemosia_os/src/phi/core/libraries/: dizionario.phi
senemosia_os/src/quantum/: circuits.rs  gates.rs  grover.rs  interface.rs  mod.rs  qasm.rs  qubit.rs  registers.rs
senemosia_os/src/sched/: mod.rs  spectral.rs
senemosia_os/src/syscall/: mod.rs
(+11 files in other folders)
